err/wheelcms-rss.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wheelcms_axle'...
Listing './lib/python3.5/site-packages/wheelcms_axle/locale'...
Listing './lib/python3.5/site-packages/wheelcms_axle/locale/en'...
Listing './lib/python3.5/site-packages/wheelcms_axle/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wheelcms_axle/locale/nl'...
Listing './lib/python3.5/site-packages/wheelcms_axle/locale/nl/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/wheelcms_axle/main.py'...
***   File "./lib/python3.5/site-packages/wheelcms_axle/main.py", line 327
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wheelcms_axle/management'...
Listing './lib/python3.5/site-packages/wheelcms_axle/management/commands'...
Compiling './lib/python3.5/site-packages/wheelcms_axle/management/commands/export.py'...
***   File "./lib/python3.5/site-packages/wheelcms_axle/management/commands/export.py", line 60
    print "Copy %s to %s" % (source, dest)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wheelcms_axle/management/commands/import.py'...
***   File "./lib/python3.5/site-packages/wheelcms_axle/management/commands/import.py", line 41
    print "%s may not be writable. Continue (y/n)?" % settings.MEDIA_ROOT
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wheelcms_axle/migrations'...
Listing './lib/python3.5/site-packages/wheelcms_axle/registries'...
Listing './lib/python3.5/site-packages/wheelcms_axle/settings'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/css'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/css/upload'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/images'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/img'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/img/icons'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/js'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/js/upload'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/tagmanager'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/tiny_mce'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/tiny_mce/plugins'...
Listing './lib/python3.5/site-packages/wheelcms_axle/static/tiny_mce/plugins/wheel_browser'...
Listing './lib/python3.5/site-packages/wheelcms_axle/templates'...
Listing './lib/python3.5/site-packages/wheelcms_axle/templates/search'...
Listing './lib/python3.5/site-packages/wheelcms_axle/templates/two.bootstrap'...
Listing './lib/python3.5/site-packages/wheelcms_axle/templates/userena'...
Listing './lib/python3.5/site-packages/wheelcms_axle/templates/wheelcms_axle'...
Listing './lib/python3.5/site-packages/wheelcms_axle/templatetags'...
Listing './lib/python3.5/site-packages/wheelcms_axle/tests'...
Compiling './lib/python3.5/site-packages/wheelcms_axle/tests/test_impexp.py'...
***   File "./lib/python3.5/site-packages/wheelcms_axle/tests/test_impexp.py", line 18
    print ElementTree.tostring(n, 'utf-8')
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wheelcms_axle/workflows'...
Listing './lib/python3.5/site-packages/wheelcms_axle-0.9.egg-info'...
Listing './lib/python3.5/site-packages/wheelcms_rss'...
Listing './lib/python3.5/site-packages/wheelcms_rss/templates'...
Listing './lib/python3.5/site-packages/wheelcms_rss/templates/wheelcms_rss'...
Listing './lib/python3.5/site-packages/wheelcms_rss/tests'...
Listing './lib/python3.5/site-packages/wheelcms_rss-0.8.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
